2008-08-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Håvard Graff <havard dot graff at tandberg dot com>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_rtp_jitter_buffer_chain):
	Fix debug by logging the right seqnum.

2008-08-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>

	* gst/rtpmanager/gstrtpbin.c: (get_pt_map):
	Release lock before emitting the request-pt-map signal.
	Fixes #543480.

2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace_simple_method_interpolate_scanline),
	(gst_deinterlace_simple_method_copy_scanline),
	(gst_deinterlace_simple_method_deinterlace_frame):
	* gst/deinterlace2/tvtime/greedy.c: (deinterlace_frame_di_greedy):
	* gst/deinterlace2/tvtime/greedyh.c:
	(deinterlace_frame_di_greedyh):
	* gst/deinterlace2/tvtime/scalerbob.c:
	(deinterlace_scanline_scaler_bob):
	* gst/deinterlace2/tvtime/tomsmocomp.c: (Fieldcopy):
	* gst/deinterlace2/tvtime/weave.c: (deinterlace_scanline_weave),
	(copy_scanline):
	* gst/deinterlace2/tvtime/weavebff.c: (deinterlace_scanline_weave),
	(copy_scanline):
	* gst/deinterlace2/tvtime/weavetff.c: (deinterlace_scanline_weave),
	(copy_scanline):
	Use oil_memcpy() instead of memcpy() as it's faster for the sizes that
	are usually used here.

2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/Makefile.am:
	* gst/deinterlace2/gstdeinterlace2.c:
	(gst_deinterlace_simple_method_deinterlace_frame),
	(gst_deinterlace2_methods_get_type), (gst_deinterlace2_set_method):
	* gst/deinterlace2/gstdeinterlace2.h:
	* gst/deinterlace2/tvtime/linear.c:
	(deinterlace_scanline_linear_c), (deinterlace_scanline_linear_mmx),
	(deinterlace_scanline_linear_mmxext),
	(gst_deinterlace_method_linear_class_init),
	(gst_deinterlace_method_linear_init):
	* gst/deinterlace2/tvtime/linearblend.c:
	(deinterlace_scanline_linear_blend_c),
	(deinterlace_scanline_linear_blend2_c),